[package]
name = "logging-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
poem = { version = "1.3.58", features = ["anyhow"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-stackdriver = "0.7.2"
tracing-subscriber = "0.3.17"
